--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -11,6 +11,9 @@
     "start-live": "webpack-dev-server --env.live --progress --hot --open"
   },
   "dependencies": {
+    "@loaders.gl/core": "^1.1.0",
+    "@loaders.gl/obj": "^1.1.0",
+    "bowser": "^2.1.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "streetscape.gl": "^1.0.0-beta"
@@ -22,7 +25,11 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0",
+    "css-loader": "^0.28.11",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.21.0",
     "webpack": "^4.20.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.1"
